Nette-Code Opdracht Opnieuw Ingeleverd

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Home | Demo Site</title>
-  <link rel="stylesheet" href="allesdoorelkaar/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="home-page sidebar-layout">
   <header id="header">
@@ -17,7 +17,7 @@
     <main id="main-content">
       <h1>Home</h1>
       <p>
-        <img src="allesdoorelkaar/city-200-150.jpg" alt="Beautiful city">
+        <img src="images/city-200-150.jpg" alt="Beautiful city">
         Lorem ipsum <strong>dolor sit amet, consectetur adipiscing elit</strong>. Nunc in 
         tempus augue, vitae dapibus augue. Sed accumsan iaculis mauris a 
         mollis. Sed cursus ligula id odio bibendum, at lacinia ante tincidunt. 
